--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AuthActivity"></activity>
+        <activity android:name=".RecoveryActivity"></activity>
+        <activity android:name=".AuthActivity" />
         <activity android:name=".RegisterActivity" />
         <activity
             android:name=".LoginActivity"
