--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity android:name=".RecoveryActivity"></activity>
         <activity android:name=".AuthActivity" />
         <activity android:name=".RegisterActivity" />
+        <activity android:name=".main.MainActivity" />
         <activity
             android:name=".LoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
