ADD: Library => Hawk NOTA: Usado como sustituto del SharedPrefences

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
 
     implementation 'agency.tango.android:avatar-view-glide:0.0.2'
 
+    implementation "com.orhanobut:hawk:2.0.1"
+
 }
